--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,7 +13,7 @@
     color: #fff;
 }
 .nav{
-    width: 300px;
+    width: 260px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,14 +30,20 @@ li{
 }
 .themeChanger{
     width: 150px;
-    height: 70px;
+    height: 50px;
     background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 16px;
     color: #333;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+.themeChanger:hover{
+    border: 2px #fff solid;
+    background-color: #333;
+    color: #fff;
 }
