--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
   box-sizing: border-box;
   font-family: Montserrat;
 }
+.wrap{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
